package com.techlab.articulos.interfaces;

/**
 * CONSIGNA DE ESTA INTERFAZ
 * ------------------------------------------------------------
 * Esta interfaz representa un comportamiento común:
 * todo artículo debe poder calcular su precio final.
 *
 * Debe ser implementada por:
 * - ArticuloElectronico
 * - ArticuloAlimenticio
 *
 * IMPORTANTE
 * ------------------------------------------------------------
 * No todos los tipos de artículo tienen por qué calcularlo igual.
 * Justamente la idea es que cada clase lo implemente a su manera.
 */
public interface Calculable {

    double calcularPrecioFinal();
}
