package com.techlab.articulos.model;

public enum TipoArticulo {
    ELECTRONICO,
    ALIMENTICIO,
    OTRO
}
