classDiagram
    direction TB

    class Identificable {
        <<interface>>
        +getCodigo() int
    }

    class Calculable {
        <<interface>>
        +calcularPrecioFinal() double
    }

    class TipoArticulo {
        <<enumeration>>
        ELECTRONICO
        ALIMENTICIO
        OTRO
    }

    class Categoria {
        -int codigo
        -String nombre
        -String descripcion
        -TipoArticulo tipo
        +getCodigo() int
        +getNombre() String
        +getDescripcion() String
        +getTipo() TipoArticulo
    }

    class Articulo {
        -int codigo
        -String nombre
        -double precio
        -String descripcion
        -Categoria categoria
        +getCodigo() int
        +getNombre() String
        +getPrecio() double
        +getCategoria() Categoria
        +setNombre(String) void
        +setPrecio(double) void
        +setCategoria(Categoria) void
    }

    class ArticuloGeneral {
        -double IVA
        +calcularPrecioFinal() double
    }

    class ArticuloElectronico {
        -double IVA
        -int garantiaMeses
        +getGarantiaMeses() int
        +calcularPrecioFinal() double
    }

    class ArticuloAlimenticio {
        -double IVA
        -LocalDate fechaVencimiento
        +getFechaVencimiento() LocalDate
        +calcularPrecioFinal() double
    }

    class Repositorio~T extends Identificable~ {
        -lista ArrayList
        +agregar(T) void
        +listar() List
        +buscarPorCodigo(int) T
        +eliminar(T) void
        +estaVacio() boolean
    }

    Identificable <|.. Categoria
    Identificable <|.. Articulo
    Calculable <|.. ArticuloElectronico
    Calculable <|.. ArticuloAlimenticio
    Calculable <|.. ArticuloGeneral
    Articulo <|-- ArticuloElectronico
    Articulo <|-- ArticuloAlimenticio
    Articulo <|-- ArticuloGeneral
    Articulo --> Categoria : tiene
    Categoria --> TipoArticulo : tipo
    Repositorio ..> Identificable